<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/switch_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="5dp"
            android:textSize="14dp"
            android:text="@string/usage" />

        <ToggleButton
            android:id="@+id/recording_switch"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            android:layout_marginBottom="10dp"
            android:onClick="toggleRecordingState"
            android:textSize="14dp"
            android:textOff="@string/start_repeating_alarm"
            android:textOn="@string/stop_repeating_alarm" />

        <Button
            android:id="@+id/set_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="15dp"
            android:onClick="setInterval"
            android:textSize="14dp"
            android:text="@string/set_interval" />

        <Button
            android:id="@+id/show_history"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:onClick="finishActivity"
            android:textSize="14dp"
            android:text="@string/show_history" />

        <Button
            android:id="@+id/import_history"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="10dp"
            android:onClick="importFromFile"
            android:textSize="14dp"
            android:text="@string/import_history" />

        <Button
            android:id="@+id/export_history"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="10dp"
            android:onClick="exportToFile"
            android:textSize="14dp"
            android:text="@string/export_history" />

        <Button
            android:id="@+id/clear_history"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="10dp"
            android:onClick="clearHistory"
            android:textSize="14dp"
            android:text="@string/clear_history" />

        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showInfo"
            android:textSize="14dp"
            android:text="@string/about" />
    </LinearLayout>

</ScrollView>