<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/settings"
        android:layout_above="@+id/previous_day"
        android:layout_alignParentLeft="true"/>

    <ToggleButton
        android:id="@+id/draw_markers"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textOff="@string/draw_markers"
        android:textOn="@string/no_markers"
        android:layout_above="@+id/next_day"
        android:layout_toRightOf="@+id/settings"/>

    <Button
        android:id="@+id/previous_day"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/previous_day"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/next_day"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/next_day"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/previous_day"/>

    <Button
        android:id="@+id/date_picker"
        android:layout_height="80dp"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>

    <!-- calendar dashboard: invisible by default -->
    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar"
        android:visibility="gone"
        android:layout_above="@id/next_day"
        android:layout_alignTop="@id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/map"
        android:layout_alignLeft="@id/map"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/earliest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:visibility="gone"
            android:text="@string/earliest_day" />

        <Button
            android:id="@+id/draw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/draw"
            android:visibility="gone" />

        <Button
            android:id="@+id/today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:visibility="gone"
            android:text="@string/today" />
    </LinearLayout>
</RelativeLayout>
