<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="4dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:paddingBottom="4dp"
            android:text="@string/usage" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="4dp" >

                <ToggleButton
                    android:id="@+id/recording_switch"
                    android:layout_width="240dp"
                    android:layout_height="80dp"
                    android:layout_weight="0"
                    android:textOff="@string/start_repeating_alarm"
                    android:textOn="@string/stop_repeating_alarm" />

                <Button
                    android:id="@+id/set_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/set_interval" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="30dp" />

                <Button
                    android:id="@+id/show_fixes"
                    android:layout_width="160dp"
                    android:layout_height="60dp"
                    android:text="@string/show_history" />
            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="4dp" >

                <Button
                    android:id="@+id/import_history"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/import_history" />

                <Button
                    android:id="@+id/export_history"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/export_history" />

                <Button
                    android:id="@+id/clear_history"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/clear_history" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>